# Vectora

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  build.rs
apps/cutlass-desktop/: Cargo.toml  README.md
apps/cutlass-desktop/src/: account.rs  agent.rs  agent_app_control.rs  agent_jobs.rs  agent_project.rs  agent_senses.rs  agent_session.rs  agent_system.rs  agent_vision.rs  ai_media.rs  analysis_index.rs  audio.rs  bootstrap.rs  cache_references.rs  cache_registry.rs  cache_ui.rs  cloud.rs  download_safety.rs  drafts.rs  external.rs  inspector.rs  interaction.rs  library_helpers.rs  lottie_stickers.rs  lut_catalog.rs  main.rs  os_drop.rs  paths.rs  placement.rs  preview.rs  preview_gesture.rs  preview_select.rs  preview_worker.rs  projection.rs  proxy.rs  ruler.rs  selection.rs  session.rs  settings_cache_tests.rs  sfx.rs  (+12 more)
apps/cutlass-desktop/tests/: agent_senses.rs  agent_vision.rs  timeline_map.rs
apps/cutlass-desktop/ui/: app.slint  fullscreen-preview.slint  launch.slint  state.slint  test-app.slint
crates/app/: Cargo.toml
crates/app/src/: convert.rs  import.rs  main.rs  preview.rs  session.rs  timeline_ui.rs
crates/app/ui/: app.slint  editor.slint  preview.slint
crates/cutlass-ai/: Cargo.toml  README.md
crates/cutlass-ai/examples/: agent_probe.rs  chat_probe.rs
crates/cutlass-ai/src/: agent.rs  config.rs  describe.rs  extend.rs  lib.rs  provider.rs  tools.rs  validate.rs  wire.rs
crates/cutlass-ai/tests/: agent_eval.rs  engine_roundtrip.rs  tool_schema.rs
crates/cutlass-analysis/: Cargo.toml
crates/cutlass-analysis/src/: lib.rs  moments.rs  shot_detection.rs
crates/cutlass-analysis/tests/: audio_analysis.rs  moment_adapters.rs  moments.rs  moments_sqlite.rs  shot_detection.rs
crates/cutlass-app/: Cargo.toml
crates/cutlass-app/src/: main.rs
crates/cutlass-cache/: Cargo.toml
crates/cutlass-cache/src/: lib.rs
crates/cutlass-cache/tests/: persistence.rs  workflow.rs
crates/cutlass-cli/: Cargo.toml
crates/cutlass-cli/src/: main.rs
crates/cutlass-cloud/: Cargo.toml
crates/cutlass-cloud/src/: auth.rs  cache.rs  client.rs  download.rs  dto.rs  error.rs  generate.rs  lib.rs  stock.rs  token_store.rs
crates/cutlass-commands/: Cargo.toml  README.md
crates/cutlass-commands/src/: command.rs  lib.rs
crates/cutlass-commands/tests/: wire_format.rs
crates/cutlass-compositor/: Cargo.toml
crates/cutlass-compositor/benches/: composite.rs
crates/cutlass-compositor/shaders/: blit.wgsl  canvas_grade.wgsl  effect_blur.wgsl  effect_blur_h.wgsl  effect_blur_v.wgsl  effect_chromatic.wgsl  effect_glitch.wgsl  effect_glow.wgsl  effect_grain.wgsl  effect_mirror.wgsl  effect_passthrough.wgsl  effect_pixelate.wgsl  effect_sharpen.wgsl  effect_vignette.wgsl  effect_zoom_blur.wgsl  fullscreen.wgsl  grade.wgsl  lut.wgsl  mask.wgsl  rgba.wgsl  rgba_fx.wgsl  rgba_to_yuv.wgsl  shape.wgsl  solid.wgsl  transition_crossfade.wgsl  transition_dip_to_black.wgsl  transition_dip_to_white.wgsl  transition_slide.wgsl  transition_wipe.wgsl  transition_wipe_down.wgsl  transition_wipe_left.wgsl  transition_wipe_right.wgsl  transition_wipe_up.wgsl  yuv.wgsl  yuv_blit.wgsl  yuv_fx.wgsl
crates/cutlass-compositor/src/: compositor.rs  dx12_import.rs  effect_render.rs  effects.rs  error.rs  gpu.rs  grade.rs  layer.rs  lib.rs  lut.rs  metal_import.rs  passes.rs  transitions.rs  yuv.rs
crates/cutlass-compositor/tests/: composite.rs  golden_frames.rs  render.rs  yuv_convert.rs
crates/cutlass-core/: Cargo.toml
crates/cutlass-core/src/: audio.rs  color.rs  decode.rs  encode.rs  frame.rs  geometry.rs  image.rs  lib.rs  pixel.rs  time.rs
crates/cutlass-decoder/: Cargo.toml  REVIEW.md
crates/cutlass-decoder/benches/: decode.rs
crates/cutlass-decoder/examples/: decode_bench.rs  scrub_bench.rs  seek_probe.rs  wmf_audio_probe.rs  wmf_frame_dump.rs  wmf_probe.rs
crates/cutlass-decoder/src/: android.rs  animation.rs  apple.rs  apple_audio.rs  error.rs  image.rs  image_apple.rs  lib.rs  lottie.rs  mp4_duration.rs  pcm.rs  peaks.rs  probe.rs  seek.rs  wmf.rs  wmf_audio.rs  wmf_d3d.rs  wmf_gpu.rs
crates/cutlass-decoder/tests/: decode_workflow.rs  image.rs  seek_workflow.rs
crates/cutlass-download/: Cargo.toml
crates/cutlass-download/src/: lib.rs
crates/cutlass-download/tests/: integration.rs
crates/cutlass-encoder/: Cargo.toml
crates/cutlass-encoder/src/: android.rs  apple.rs  error.rs  export.rs  h264.rs  lib.rs  proxy.rs  wmf.rs  yuv.rs
crates/cutlass-encoder/tests/: long_av.rs  roundtrip.rs
crates/cutlass-engine/: Cargo.toml  README.md
crates/cutlass-engine/benches/: export.rs  preview.rs
crates/cutlass-engine/examples/: playback_bench.rs
crates/cutlass-engine/src/: caption.rs  clip_audio.rs  composite.rs  decoder_pool.rs  engine.rs  error.rs  export.rs  export_audio.rs  frame.rs  generator_raster.rs  import.rs  lib.rs  preview.rs
crates/cutlass-engine/tests/: captions.rs  clip_beats.rs  color_convert.rs  compound_undo.rs  duplicate_clip.rs  e2e.rs  effects.rs  effects_drift.rs  export.rs  extract_audio.rs  freeze_frame.rs  import_probe.rs  import_still.rs  inverse_edits.rs  inverse_undo.rs  preview.rs  project_file.rs  relink.rs  ripple.rs  session_reload_undo.rs  template.rs  transcript.rs  unlink_clips.rs  workflow.rs
crates/cutlass-ml/: Cargo.toml
crates/cutlass-ml/src/: captions.rs  config.rs  lib.rs  models.rs
crates/cutlass-mobile/: Cargo.toml
crates/cutlass-mobile/src/: android.rs  audio.rs  catalogs.rs  export_job.rs  intents.rs  lib.rs  session.rs  thumbs.rs  ui_state.rs  wire.rs
crates/cutlass-models/: Cargo.toml  REVIEW.md
crates/cutlass-py/: Cargo.toml  README.md  api-design.md  build.rs  cutlass.pyi  pyproject.toml
crates/cutlass-render/: Cargo.toml
crates/cutlass-settings/: Cargo.toml
crates/cutlass-shapes/: Cargo.toml
crates/cutlass-text/: Cargo.toml  REVIEW.md
crates/cutlass-transcription/: Cargo.toml
crates/cutlass-ui/: Cargo.toml  README.md  build.rs
crates/engine/: Cargo.toml  README.md
crates/renderer/: Cargo.toml  README.md
crates/timeline/: Cargo.toml
(+666 files in other folders)
