[workspace]
members = [
    "crates/decoder",
    "crates/renderer",
    "crates/engine",
    "crates/timeline",
    "crates/app",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wgpu = "29.0.3"
pollster = "0.4"
thiserror = "2"
