[workspace]
members = [
    "crates/cutlass-core",
    "crates/cutlass-decoder",
    "crates/cutlass-compositor",
    "crates/cutlass-shapes",
    "crates/cutlass-models",
    "crates/cutlass-commands",
]
resolver = "3"

[workspace.package]
version = "0.5.3-alpha.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/1mrnewton/cutlass"

[workspace.dependencies]
rustc-hash = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2"
tracing = "0.1"
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
