[package]
name = "cutlass-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cutlass desktop editor (Slint): a native Rust frontend that links the platform-independent engine directly."

[dependencies]
# Slint pinned to the 1.16 line: 1.17 moved the unstable wgpu interop to
# wgpu 29, while this workspace (compositor, render) pins wgpu 28 so the
# desktop UI and the engine can eventually share one device for zero-copy
# preview. Bump both together when the workspace moves to a newer wgpu.
slint = { version = "=1.16.1", features = [
    "unstable-winit-030",
    "unstable-wgpu-28",
    "renderer-femtovg-wgpu",
    "serde",
] }
# The desktop app is Rust, so it links the engine directly — no C-ABI/JNI
# bridge like the iOS/Android apps. The same `crates/cutlass-engine` drives
# three unrelated frontends.
cutlass-commands = { path = "../../crates/cutlass-commands" }
cutlass-compositor = { path = "../../crates/cutlass-compositor" }
cutlass-decoder = { path = "../../crates/cutlass-decoder" }
cutlass-encoder = { path = "../../crates/cutlass-encoder" }
cutlass-engine = { path = "../../crates/cutlass-engine" }
cutlass-text = { path = "../../crates/cutlass-text" }
cutlass-models = { path = "../../crates/cutlass-models" }
cutlass-render = { path = "../../crates/cutlass-render" }
cutlass-settings = { path = "../../crates/cutlass-settings" }
cutlass-storage = { path = "../../crates/cutlass-storage" }
cutlass-ai = { path = "../../crates/cutlass-ai" }
cutlass-cloud = { path = "../../crates/cutlass-cloud" }
cpal = "0.18.1"
crossbeam-channel = "0.5"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rfd = "0.17.2"
dirs = "6.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = [
    "NSAnimation",
    "NSAnimationContext",
    "NSApplication",
    "NSEvent",
    "NSImage",
    "NSResponder",
    "NSWindow",
    "NSView",
] }
objc2-foundation = { version = "0.3.2", features = ["NSData"] }
raw-window-handle = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

# X11 cursor query for OS file drops onto the timeline (src/os_drop.rs).
# winit 0.30's drop events carry no position; Wayland needs neither (winit
# 0.30 never delivers file drops there).
[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
raw-window-handle = "0.6"
x11rb = "0.13"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
slint-build = "=1.16.1"
