[package]
name = "cutlass-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cutlass application"

[[bin]]
name = "cutlass-app"
path = "src/main.rs"

[dependencies]
cutlass-decoder = { path = "../cutlass-decoder" }
cutlass-encoder = { path = "../cutlass-encoder" }
image = "0.25"
tracing.workspace = true
tracing-subscriber.workspace = true
