[package]
name = "cutlass-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cutlass on-disk frame and proxy caches"

[dependencies]
bincode = "1"
crossbeam-channel = "0.5.15"
memmap2 = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
