[package]
name = "cutlass-cloud"
description = "Cutlass cloud client: shared API DTOs, anonymous asset/stock access, and the BYOK-vs-managed routing seam"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
