[package]
name = "cutlass-commands"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cutlass structured editor commands (import, trim, split, …)"

[dependencies]
cutlass-models = { path = "../cutlass-models" }
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
