[package]
name = "cutlass-compositor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "WGPU compositor: turns decoded cutlass-core VideoFrames into a composited RGBA canvas (preview + export readback)."

[dependencies]
cutlass-core = { path = "../cutlass-core" }
cutlass-shapes = { path = "../cutlass-shapes" }
wgpu = { workspace = true }
bytemuck = { workspace = true }
pollster = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Apple zero-copy import: map IOSurface-backed CVPixelBuffers straight into
# wgpu textures via CVMetalTextureCache + wgpu-hal's Metal interop. Pinned to
# the same `metal` 0.33 crate wgpu-hal 28 links, so the `metal::Texture` we hand
# to `texture_from_raw` is the exact type it expects (cargo unifies the two).
[target.'cfg(target_vendor = "apple")'.dependencies]
metal = "0.33"

[dev-dependencies]
pollster = { workspace = true }
