[package]
name = "cutlass-compositor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "WGPU compositor: turns decoded cutlass-core VideoFrames into a composited RGBA canvas (preview + export readback)."

[dependencies]
cutlass-core = { path = "../cutlass-core" }
cutlass-shapes = { path = "../cutlass-shapes" }
wgpu = { workspace = true }
bytemuck = { workspace = true }
pollster = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Apple zero-copy import: map IOSurface-backed CVPixelBuffers straight into
# wgpu textures via CVMetalTextureCache + wgpu-hal's Metal interop. Pinned to
# the same `metal` 0.33 crate wgpu-hal 28 links, so the `metal::Texture` we hand
# to `texture_from_raw` is the exact type it expects (cargo unifies the two).
[target.'cfg(target_vendor = "apple")'.dependencies]
metal = "0.33"

# Windows zero-copy import: open the decoder's shared D3D11 NV12 textures on
# wgpu's D3D12 device (OpenSharedHandle) and adopt them via wgpu-hal's dx12
# interop. Pinned to the same `windows` 0.62 crate wgpu-hal 28 links, so the
# `ID3D12Resource` we hand to `texture_from_raw` is the exact type it expects
# (cargo unifies the two).
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D12",
] }

[dev-dependencies]
pollster = { workspace = true }
