[package]
name = "cutlass-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits shared across Cutlass: rational time, colorimetry, pixel formats, the GPU/CPU frame handoff, and the decode/encode contracts."

[features]
# `serde` is on by default so the data model, project files, and the AI command
# layer get derives for free; the FFI/render path can turn it off for a leaner
# build (`default-features = false`).
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
