[package]
name = "cutlass-download"
description = "The project's one downloader: resumable, verified file fetches over HTTP"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sha2 = "0.10"
thiserror.workspace = true
tracing.workspace = true
ureq = "2"

[dev-dependencies]
sha2 = "0.10"
tempfile = "3"
