[package]
name = "cutlass-ml"
description = "Local-first, provider-abstracted media inference (transcription, matting, TTS) for Cutlass"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
toml = "0.8"
ureq = "2"

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
