[package]
name = "cutlass-ml"
description = "Local-first, provider-abstracted media inference (transcription, matting, TTS) for Cutlass"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Opt-in local transcription via whisper.cpp (whisper-rs). Off by default so
# the editor build and CI never pull the C/C++ + cmake toolchain; enable with
# `--features whisper` to build the WhisperTranscriber backend.
whisper = ["dep:whisper-rs"]

[dependencies]
serde = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
toml = "0.8"
ureq = "2"
whisper-rs = { version = "0.16", optional = true }

# On Apple Silicon, build whisper.cpp's Metal (GPU) backend. Without a GPU
# feature the build falls back to the Accelerate/BLAS encoder, which mis-encodes
# on this platform: whisper auto-detects a bogus language at p≈1/99 (uniform mel)
# and then bails with "failed to encode" (ggml-org/whisper.cpp#3654). Metal also
# runs far faster and flips whisper's default `use_gpu` on. The feature stays
# gated behind cutlass-ml's `whisper`; other platforms keep the default CPU path.
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
whisper-rs = { version = "0.16", optional = true, features = ["metal"] }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
