[package]
name = "cutlass-models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cutlass editing data model: project, media pool, timeline, tracks, clips, and CapCut-style templates."

[dependencies]
cutlass-core = { path = "../cutlass-core" }
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
