[package]
name = "cutlass-text"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Text generator for Cutlass: shapes and rasterizes styled text runs into straight-alpha RgbaImage bitmaps the compositor can place as a layer."

[dependencies]
# Pinned to 0.17 by the MSRV-aware resolver (workspace rust-version = 1.85);
# newer cosmic-text pulls deps that require a higher MSRV.
cosmic-text = "0.17.0"
cutlass-core = { path = "../cutlass-core" }

[dev-dependencies]
cutlass-compositor = { path = "../cutlass-compositor" }
