[package]
name = "cutlass-transcription"
description = "Offline Whisper transcription and verified on-demand model management for Cutlass"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cap-std = "4"
same-file = "1"
sha2 = "0.10"
thiserror.workspace = true
ureq = { version = "2", default-features = false, features = ["tls"] }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", default-features = false, features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { version = "0.16", default-features = false }

[dev-dependencies]
tempfile = "3"
