[package]
name = "cutlass-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cutlass desktop editor UI (Slint)"

[[bin]]
name = "cutlass-ui"
path = "src/main.rs"

[dependencies]
cutlass-ai = { path = "../cutlass-ai" }
cutlass-compositor = { path = "../cutlass-compositor" }
cutlass-decoder = { path = "../cutlass-decoder" }
cutlass-engine = { path = "../cutlass-engine" }
cutlass-models = { path = "../cutlass-models" }
cutlass-commands = { path = "../cutlass-commands" }
crossbeam-channel = "0.5.15"
serde = { workspace = true }
serde_json = { workspace = true }
slint = { version = "1.16.1", features = [
    "unstable-winit-030",
    "unstable-wgpu-28",
    "renderer-femtovg-wgpu",
    "serde",
] }
tracing.workspace = true
tracing-subscriber.workspace = true
rfd = "0.17.2"
cpal = "0.18.1"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
slint-build = "1.16.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = [
    "NSAnimation",
    "NSAnimationContext",
    "NSApplication",
    "NSImage",
    "NSResponder",
    "NSWindow",
    "NSView",
] }
objc2-foundation = { version = "0.3.2", features = ["NSData"] }
raw-window-handle = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
