[package]
name = "renderer"
version.workspace = true
edition.workspace = true
description = "Offscreen wgpu YUV420P / NV12 / RGBA8 → RGBA8 preview and test readback."
license = "MIT OR Apache-2.0"

[dependencies]
decoder = { path = "../decoder" }
pollster.workspace = true
thiserror.workspace = true
tracing.workspace = true
wgpu.workspace = true

[dev-dependencies]
engine = { path = "../engine" }

[[example]]
name = "wgpu_probe"
path = "examples/wgpu_probe.rs"

[[example]]
name = "end_to_end"
path = "examples/end_to_end.rs"
