[package]
name = "timeline"
version.workspace = true
edition.workspace = true
description = "Cutlass project/timeline model: clips, tracks, commands, undo"

[dependencies]
decoder = { path = "../decoder" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1"
